--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/about">pa</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/notes/CSS.md">CSS</a>
+            <a href="{{ site.baseurl }}/notes/Javascript.md">Javascript</a>
+            
           </nav>
         </header>
       </div>
