--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/about">about</a>
             <a href="{{ site.baseurl }}/notes/CSS.md">CSS</a>
             <a href="{{ site.baseurl }}/notes/Javascript.md">Javascript</a>
             
