--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">about</a>
-            <a href="{{ site.baseurl }}/notes/CSS.md">CSS</a>
-            <a href="{{ site.baseurl }}/notes/Javascript.md">Javascript</a>
+            <a href="{{ site.baseurl }}/notes/CSS">CSS</a>
+            <a href="{{ site.baseurl }}/notes/Javascript">Javascript</a>
             
           </nav>
         </header>
