--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,12 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">about</a>
+ 
             <a href="{{ site.baseurl }}/notes/CSS">CSS</a>
             <a href="{{ site.baseurl }}/notes/Javascript">Javascript</a>
+            <a href="{{ site.baseurl }}/notes/Node PHP">Node PHP</a>
+            <a href="{{ site.baseurl }}/notes/React Vue">React Vue</a>
+            <a href="{{ site.baseurl }}/notes/Web_Tech">Web Tech</a>
             
           </nav>
         </header>
