--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar">
+          <a href="{{ site.baseurl }}/README" class="site-avatar">
             <img src="https://avatars1.githubusercontent.com/u/18899535?s=460&v=4" />
           </a>
           <nav>
