--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-1111111
+<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/notes.css" />
+
 <section class="notes">
     {{ content }}
 </section>
