--- a/css/general.css
+++ b/css/general.css
@@ -18,5 +18,7 @@ body{
 }
 .masthead nav a{
    padding:10px;
-   margin:10px
+   margin:10px;
+   text-decoration: none;
+   font: 400 25px/55px Sniglet,"Open Sans",sans-serif;
 }
