--- a/css/general.css
+++ b/css/general.css
@@ -23,11 +23,11 @@ body{
    font-size: 20px;
 }
 .masthead nav a{
-   padding:10px;
-   margin:10px;
-   text-decoration: none;
-   font: 400 25px/55px Sniglet,"Open Sans",sans-serif;
-   background:#ffd645;
+    text-decoration: none;
+    font: 400 25px/55px Sniglet,"Open Sans",sans-serif;
+    background: #ffd645;
+    padding: 8px 14px;
+    border-radius: 4px;
 }
 .masthead nav a:hover{
    background:#fcc43a;
