--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 ---
-
-<article class="page">
+<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/page.css" />
+<section class="page">
 Page Layout
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
     {{ content }}
   </div>
-</article>
+</section>
