--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
   <head>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} </title>
     {% include meta.html %}
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/general.css" />
-    
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/general.css" />
+    <link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
   </head>
 
   <body>
