--- a/css/page.css
+++ b/css/page.css
@@ -1,11 +1,11 @@
- a{
+#main a{
     text-decoration: none;
     font-family: 'Sniglet', cursive;
     background: #ca1f26;
     padding: 8px 14px;
     border-radius: 4px;
 }
-a:hover{
+#main a:hover{
    position:relative;
    top:-5px;
    transition:all 0.8x ease;
