--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
     {% include meta.html %}
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/general.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
   </head>
 
