--- a/css/page.css
+++ b/css/page.css
@@ -14,6 +14,7 @@
 #MyFiles{
    background: linear-gradient(70deg, #e5edf9 50%, #385d97 50%);
    height:400px;
+   padding-top: 50px;
 }
 #MyFiles div{
    display: block;
