--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,33 +11,30 @@
     
   </head>
 
-  <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar">
-            <img src="https://avatars1.githubusercontent.com/u/18899535?s=460&v=4" />
-          </a>
-          <nav>
+<body>
+   <section>
+      <header class="masthead clearfix">
+	      <a href="{{ site.baseurl }}/" class="site-avatar">
+	         <img src="https://avatars1.githubusercontent.com/u/18899535?s=460&v=4" />
+	      </a>
+	      <nav>
             <a href="{{ site.baseurl }}/notes/CSS">CSS</a>
             <a href="{{ site.baseurl }}/notes/Javascript">Javascript</a>
             <a href="{{ site.baseurl }}/notes/Node PHP">Node PHP</a>
             <a href="{{ site.baseurl }}/notes/React Vue">React Vue</a>
             <a href="{{ site.baseurl }}/notes/Web_Tech">Web Tech</a>
-             <a href="{{ site.baseurl }}/pages/blog">Blog</a>
-          </nav>
-        </header>
-      </div>
-    </div>
+            <a href="{{ site.baseurl }}/pages/blog">Blog</a>
+	      </nav>
+      </header>
+   </section>
 
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
 
-  
+  	
     <footer class="footer"> </footer>
 
 
     {% include analytics.html %}
-  </body>
-</html>
+</body></html>
