--- a/css/page.css
+++ b/css/page.css
@@ -11,12 +11,13 @@
 }
 
 /******  Home Page *********/
-#MyFiles{
+#GitGoogle{
    background: linear-gradient(70deg, #e5edf9 50%, #385d97 50%);
    height:400px;
    padding-top: 50px;
+   max-width:unset;
 }
-#MyFiles div{
+#GitGoogle div{
    display: block;
    width: 50%;
    float: left;
@@ -24,16 +25,16 @@
    text-align: center;
    
 }
-#MyFiles div:before{
+#GitGoogle div:before{
    font-family: fontawesome;
    display: block;
    font-size: 100px;
 }
-#MyFiles div:nth-of-type(1):before{
+#GitGoogle div:nth-of-type(1):before{
     content:'\f2b3';
     color: #385d97;
 }
-#MyFiles div:nth-of-type(2):before{
+#GitGoogle div:nth-of-type(2):before{
     content: '\f092';
     color: #e5edf9;
 }
