--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,11 +2,9 @@
 layout: default
 ---
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/page.css" />
-<section class="page">
-
+<div class="page">
   <h1>{{ page.title }}</h1>
-
   <div class="entry">
     {{ content }}
   </div>
-</section>
+</div>
