--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post">
+<section class="post">
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
@@ -14,4 +14,4 @@ layout: default
   </div>
 
   {% include disqus.html %}
-</article>
+</section>
