--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
             <a href="{{ site.baseurl }}/notes/React Vue">React Vue</a>
             <a href="{{ site.baseurl }}/notes/Web_Tech">Web Tech</a>
             <a href="{{ site.baseurl }}/pages/blog">Blog</a>
+            <a href="{{ site.baseurl }}/pages/test">Test</a>
 	      </nav>
       </header>
    </section>
