--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -3,6 +3,20 @@ layout: default
 ---
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/notes.css" />
 
+
+<section class=".notes">
+<nav> </nav>
+<div class=".content">
+    {{ content }}
+</div>
+    
+<section class=".notes">
+
+
+
+
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
