--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -21,7 +21,8 @@ layout: default
 <script>
 $(document).ready(function(){
 	// click go to target title 
-    $(".notes .content  h1, .notes .content h2 ").clone(true,true).appendTo( ".notes nav" );
+	console.log( $(".notes .content  h1, .notes .content h2 ") );
+    $(".notes .content  h1, .notes .content h2 ").clone().appendTo( ".notes nav" );
     $(".notes .content h1 ").click(function() {
     	let Nav_Title = $(this).text();
     	let SelectedTag =$(".notes .content h1:contains("+Nav_Title+")");
@@ -31,8 +32,6 @@ $(document).ready(function(){
     })
     // left navigation continues shown 
   	$(document).on( 'scroll', function(){
-    	console.log( $(window).height() ) ;
-    	console.log( document.body.clientHeight);
     	if( self.pageYOffset+document.body.clientHeight  > $('.notes nav').height()  ){
     		$('.notes nav').css({'position':'fixed', 'bottom':'0'});
     	}else{
