--- a/css/notes.css
+++ b/css/notes.css
@@ -1,11 +1,52 @@
 
-/******  Show h1,h2,h3  ******/
+/*******  Navigation Bar *********/
+.notes nav{
+	position: absolute;
+	display: block;
+	margin-top: 10px;
+	margin-left: 10px;
+}
+.notes nav h2{
+	margin-left: 20px;
+}
+.notes nav:before{
+	width: 0;
+    height: 0;
+    border-style: solid;
+    border-color: transparent;
+    border-width: 20px;
+    content: "";
+    border-right-color: orange;
+	position: fixed;
+	top: 50%;
+	left: 220px;
+}
+.notes .content{
+	width: 80%;
+	margin-left: 250px;
+	background:BlanchedAlmond;
+	border-left: 5px solid yellowgreen;
+	padding-left: 10px;
+}
+.notes .content,
+.notes nav{
+	counter-reset: H_One;
+}
+.notes h1{
+	counter-reset: H_Two;
+}
+.notes  h1:before {
+  	counter-increment: H_One;
+  	content: counter(H_One) ' ';
+}
+.notes h2:before {
+	counter-increment: H_Two;
+  	content:counter(H_One) '.' counter(H_Two) ' ';
+}
 
 
 
-
-
-
+/******  Show h1,h2,h3  *****/
 body *{
 //  display: none;
 }
