--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -4,9 +4,9 @@ layout: default
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/notes.css" />
 
 
-<section class=".notes">
+<section class="notes">
 <nav>1111111 </nav>
-<div class=".content">
+<div class="content">
     {{ content }}
 </div>
     
