--- a/css/notes.css
+++ b/css/notes.css
@@ -1,6 +1,8 @@
 
 /*******  Navigation Bar *********/
-
+.notes{
+   max-width:unset;
+}
 .notes nav{
    position: absolute;
    display: block;	
@@ -18,7 +20,7 @@
     border: 0;
 }
 .notes nav:before{
-	width: 0;
+    width: 0;
     height: 0;
     border-style: solid;
     border-color: transparent;
@@ -31,7 +33,8 @@
 }
 .notes .content{
 	width: 80%;
-	margin-left: 250px;
+	max-width:900px;
+	margin-left: 300px;
 	background:BlanchedAlmond;
 	border-left: 5px solid yellowgreen;
 	padding-left: 10px;
