--- a/css/notes.css
+++ b/css/notes.css
@@ -35,7 +35,6 @@
 	width: 80%;
 	max-width:900px;
 	margin-left: 300px;
-	background:BlanchedAlmond;
 	border-left: 5px solid yellowgreen;
 	padding-left: 10px;
 }
@@ -135,7 +134,7 @@ pre code{
   font-size: 16px;
   color:rgb(39,96,168);
   white-space: pre;
-  background-color: #f8f8f8;
+  background: rgba(248, 248, 248,0.3);
   border: 1px solid #cccccc;
   padding: 10px 5px;
   border-radius: 3px;
