--- a/css/notes.css
+++ b/css/notes.css
@@ -57,21 +57,11 @@
 
 
 /******  Show h1,h2,h3  *****/
-body *{
-//  display: none;
-}
-
-h1,h2,h3{
-  display: block;
-}
-
-body {
+.notes {
   font-family: monospace;
-  background-color: white;
-  padding: 10px 30px; 
 }
 
-br{
+.notes br{
   display: none;
 }
   /*
@@ -80,7 +70,7 @@ br{
 
 
 /*********  Font Size ***********/
-h1 {
+.notes h1 {
   font-family: fantasy;
   font-size: 30px;
   color: #b58900;
@@ -88,7 +78,7 @@ h1 {
   margin: 10px 0;
 }
 
-h2 {
+.notes h2 {
   font-family: sans-serif;
   font-size: 26px;
   color: rgb(0,0,138);
@@ -96,7 +86,7 @@ h2 {
   margin: 10px 0;
 }
 
-h3 {
+.notes h3 {
   font-family: sans-serif;
   font-size: 20px; 
   color: rgb(70,122,36);
@@ -104,7 +94,7 @@ h3 {
   margin: 10px 0;
 }
 
-h4{
+.notes h4{
   color: #EB2F2A;
   font-size: 16px;
   margin: 10px 0; 
@@ -120,7 +110,7 @@ h5, h6, p,table {
   white-space: pre-wrap;
 }
 
-a{
+.notes a{
   color: rgb(109,4,77);
 }
 a:hover{
@@ -129,7 +119,7 @@ a:hover{
 
 /*** inline code ****/
 
-pre code{
+.notes pre code{
   display: block;
   font-size: 16px;
   color:rgb(39,96,168);
