--- a/css/general.css
+++ b/css/general.css
@@ -4,7 +4,9 @@
 	dark yellow: #fcc43a
 *********/
 
-
+body{
+   background-color: blanchedalmond;
+}
 section{
    max-width: 900px;
    margin: auto;
