--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -5,11 +5,10 @@ layout: default
 
 
 <section class="notes">
-<nav></nav>
-<div class="content">
-    {{ content }}
-</div>
-    
+   <nav>   <div> </div>  </nav>
+   <div class="content">
+      {{ content }}
+   </div>
 </section >
 
 
