--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -22,6 +22,7 @@ $(document).ready(function(){
   	// click go to target title 
     $(".notes .content h1, .notes .content h2 ").clone(true,true).appendTo( ".notes nav" );
     $(".notes nav h1").click(function() {
+	console.log(SelectedTag.offset());
     	let Nav_Title = $(this).text();
     	let SelectedTag =$(".notes.content h1:contains("+Nav_Title+")");
     	$('html, body').animate({
