--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -31,6 +31,8 @@ $(document).ready(function(){
      });
      $(".notes nav div").click(function() {
 	  $(".notes nav").css({'display':'none'});
+	  $(".notes .content").css({'margin': 'auto;','border':'0'});
+	     
      });
     // left navigation continues shown 
 /***
