--- a/css/page.css
+++ b/css/page.css
@@ -74,10 +74,14 @@
    width:31.333%;
    padding:10px 0.5%;
    margin:5px 0.5%;
-    
+   float:left;
+   
 }
 
-
+#BlogPage img{
+  
+    
+}
 
 
 
