--- a/css/page.css
+++ b/css/page.css
@@ -79,11 +79,23 @@
    padding:10px 0.5%;
    margin:5px 0.5%;
    float:left;
+   display: block;
+   height: 400px;
 }
-
-#BlogPage img{
-  
-    
+#BlogPage article h1 a{
+    white-space: nowrap;
+    text-align: center;
+    font-size: 25px;
+    display: block;
+}
+#BlogPage article h1{
+    margin: 10px;
+    border-bottom-right-radius: 0;
+}
+#BlogPage article img{
+    width: 100%;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 
