--- a/css/page.css
+++ b/css/page.css
@@ -92,11 +92,14 @@
     display: block;
 }
 #BlogPage article img{
-    width: 40%;
-    margin-right:10px;
-    border-radius: 10px;
-    float:left;
+    margin-right: 10px;
+    float: left;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 1px solid #ddd;
+    border-radius: 100px;
+    padding: 3px;
+    width: 100px;
+    height: 100px;
 }
 
 
