--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+published: true
 ---
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/page.css" />
 <div class="page">
@@ -12,3 +13,5 @@ layout: default
 
 
 <footer class="footer"> </footer>
+
+
