--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@ published: true
 	<div id="Footer_left">
    		<ul>
           	<li><a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit On Github</a> </li>
-          	<li><a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Up Load Image</a> </li>
+          	<li><a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Upload Image</a> </li>
           	<li><a href="#" > Blank</a> </li>
        	</ul>    
   	</div>
