--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,8 @@
 	         <img src="https://avatars1.githubusercontent.com/u/18899535?s=460&v=4" />
 	      </a>
 	      <nav>
-	    <a href="{{ site.baseurl }}/pages/blog">Blog</a>      
+	    <a href="{{ site.baseurl }}/pages/blog">Blog</a>  
+	    <a href="{{ site.baseurl }}/pages/colortable">Color Table</a>
             <a href="{{ site.baseurl }}/notes/CSS">CSS</a>
             <a href="{{ site.baseurl }}/notes/Javascript">Javascript</a>
             <a href="{{ site.baseurl }}/notes/Node PHP">Node PHP</a>
