--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 	      </a>
 	      <nav>
 	    <a href="{{ site.baseurl }}/pages/blog">Blog</a>  
-	    <a href="{{ site.baseurl }}/pages/colortable">Color Table</a>
+	    <a href="{{ site.baseurl }}/pages/colortable">Color</a>
             <a href="{{ site.baseurl }}/notes/CSS">CSS</a>
             <a href="{{ site.baseurl }}/notes/Javascript">Javascript</a>
             <a href="{{ site.baseurl }}/notes/Node PHP">Node PHP</a>
