--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,6 +14,7 @@ published: true
 
 
 <footer class="footer"> 
+<section>	
 	<div id="Footer_left">
    		<ul>
           	<li><a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit On Github</a> </li>
@@ -22,5 +23,5 @@ published: true
        	</ul>    
   	</div>
   
-
+</section>	
 </footer>
