--- a/css/general.css
+++ b/css/general.css
@@ -42,7 +42,7 @@ section{
 /******  Footer ****/
 footer{
     clear:both;
-    background: #a27d12;
+    background: #f0f0f0;
     height: 200px;
     margin: auto;
 }
