--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,9 +17,11 @@ published: true
 <section>	
 	<div id="Footer_left">
    		<ul>
-          	<li><a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit On Github</a> </li>
-          	<li><a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Upload Image</a> </li>
-          	<li><a href="#" > Blank</a> </li>
+          	<li><i class="fa fa-git-square" aria-hidden="true"></i>
+                <a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit On Github</a> </li>
+          	<li><i class="fa fa-cloud-upload" aria-hidden="true"></i>
+                <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Upload Image</a> </li>
+          	
        	</ul>    
   	</div>
   
