--- a/css/notes.css
+++ b/css/notes.css
@@ -1,7 +1,7 @@
 
 /*******  Navigation Bar *********/
 body{
-   background-color: blanchedalmond;
+   background-color: #d7eaf3;
 }
 .notes{
    max-width:unset;
