--- a/css/notes.css
+++ b/css/notes.css
@@ -43,11 +43,11 @@ body{
 }
 .notes .content{
 	width: 80%;
-	max-width:800px;
-	margin-left: 300px;
-	border-left: 5px solid yellowgreen;
-	padding-left: 10px;
-	padding-bottom: 100px;
+    max-width: 800px;
+    margin-left: 288px;
+    border-left: 1px solid gray;
+    padding-left: 10px;
+    padding-bottom: 100px;
 }
 .notes .content,
 .notes nav{
