--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,7 +15,7 @@ published: true
 
 <footer class="footer"> 
 <section>	
-	<div id="Footer_left">
+	<div id="FooterLeft">
    		<ul>
           	<li><i class="fa fa-git-square" aria-hidden="true"></i>
                 <a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit On Github</a> </li>
@@ -24,6 +24,19 @@ published: true
           	
        	</ul>    
   	</div>
+  
+  
+  
+  <div id="FooterRight">
+   		<ul>
+          	<li><i class="fa fa-git-square" aria-hidden="true"></i>
+                <a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit Notes</a> </li>
+          	<li><i class="fa fa-cloud-upload" aria-hidden="true"></i>
+                <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Upload Notes Picture</a> </li>
+          	
+       	</ul>    
+  	</div>
+  
   
 </section>	
 </footer>
