--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,8 +15,8 @@ published: true
 
 <footer class="footer"> 
 <section>	
-	<div id="FooterLeft">
-   		<ul>
+	<div class="FooterBlock">
+   		<ul >
           	<li><i class="fa fa-git-square" aria-hidden="true"></i>
                 <a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit On Github</a> </li>
           	<li><i class="fa fa-cloud-upload" aria-hidden="true"></i>
@@ -27,7 +27,7 @@ published: true
   
   
   
-  <div id="FooterRight">
+  <div class="FooterBlock">
    		<ul>
           	<li><i class="fa fa-git-square" aria-hidden="true"></i>
                 <a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit Notes</a> </li>
