--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -32,7 +32,7 @@ published: true
           	<li><i class="fa fa-sticky-note" aria-hidden="true"></i>
                 <a href="http://prose.io/#rfd3344/rfd3344.github.io/tree/master/notes" target="_blank"> Edit Notes</a> </li>
           	<li><i class="fa fa-file-image-o" aria-hidden="true"></i>
-                <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Edit Notes Picture</a> </li>
+                <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/notes/zPhoto" target="_blank"> Edit Notes Picture</a> </li>
           	
        	</ul>    
   	</div>
