--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -34,7 +34,7 @@ published: true
           	<li><i class="fa fa-file-image-o" aria-hidden="true"></i>
                 <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/notes/zPhoto" target="_blank"> Edit Notes Picture</a> </li>
           <li><i class="fa fa-files-o" aria-hidden="true"></i>
-              <a href="http://prose.io/#rfd3344/rfd3344.github.io/tree/master/_posts" target="_blank"> Publish Post </a> </li>
+              <a href="http://prose.io/#rfd3344/rfd3344.github.io/tree/master/_posts" target="_blank"> Publish Blog </a> </li>
           
 
           
