--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,11 @@
 	         <img src="https://avatars1.githubusercontent.com/u/18899535?s=460&v=4" />
 	      </a>
 	      <nav>
-	    <a href="{{ site.baseurl }}/pages/blog">Blog</a>  
-	    <a href="{{ site.baseurl }}/pages/colortable">Color</a>
+	        <a href="{{ site.baseurl }}/pages/blog">Blog</a>  
+            <a href="{{ site.baseurl }}/pages/colortable">Color</a>
             <a href="{{ site.baseurl }}/notes/CSS">CSS</a>
             <a href="{{ site.baseurl }}/notes/Javascript">Javascript</a>
-            <a href="{{ site.baseurl }}/notes/Node PHP">Node PHP</a>
+            <a href="{{ site.baseurl }}/notes/Node PHP">PHP Node</a>
             <a href="{{ site.baseurl }}/notes/React Vue">React Vue</a>
             <a href="{{ site.baseurl }}/notes/Web_Tech">Web Tech</a>
             <a href="{{ site.baseurl }}/pages/test">Test</a>
