--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
             <a href="{{ site.baseurl }}/pages/colortable">Color</a>
             <a href="{{ site.baseurl }}/notes/CSS">CSS</a>
             <a href="{{ site.baseurl }}/notes/Javascript">Javascript</a>
-            <a href="{{ site.baseurl }}/notes/Node PHP">PHP Node</a>
+            <a href="{{ site.baseurl }}/notes/PHP_Node">PHP Node</a>
             <a href="{{ site.baseurl }}/notes/React Vue">React Vue</a>
             <a href="{{ site.baseurl }}/notes/Web_Tech">Web Tech</a>
             <a href="{{ site.baseurl }}/pages/test">Test</a>
