--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
             <a href="{{ site.baseurl }}/notes/CSS">CSS</a>
             <a href="{{ site.baseurl }}/notes/Javascript">Javascript</a>
             <a href="{{ site.baseurl }}/notes/PHP_Node">PHP Node</a>
-            <a href="{{ site.baseurl }}/notes/React Vue">React Vue</a>
-            <a href="{{ site.baseurl }}/notes/Web_Tech">Web Tech</a>
+            <a href="{{ site.baseurl }}/notes/Vue_React">React Vue</a>
+            <a href="{{ site.baseurl }}/notes/Programming">Programming</a>
             <a href="{{ site.baseurl }}/pages/test">Test</a>
 	      </nav>
       </header>
