--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,8 +20,7 @@ published: true
           	<li><i class="fa fa-git-square" aria-hidden="true"></i>
                 <a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit On Github</a> </li>
           	<li><i class="fa fa-cloud-upload" aria-hidden="true"></i>
-                <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Upload Image</a> </li>
-          	
+                <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Upload Image</a> </li>  	
        	</ul>    
   	</div>
   
@@ -35,14 +34,17 @@ published: true
                 <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/notes/zPhoto" target="_blank"> Edit Notes Picture</a> </li>
           <li><i class="fa fa-th-large" aria-hidden="true"></i>
               <a href="http://prose.io/#rfd3344/rfd3344.github.io/tree/master/_posts" target="_blank"> Publish Blog </a> </li>
-          
-
-          
-          
-          
        	</ul>    
   	</div>
   
+	<div class="FooterBlock">
+   		<ul >
+          	<li><i class="fa fa-git-square" aria-hidden="true"></i>
+                <a href="https://rfd3344.github.io/notes/MacCommend/" target="_blank"> Edit On Github</a> </li>
+          	<li><i class="fa fa-cloud-upload" aria-hidden="true"></i>
+                <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Upload Image</a> </li>  	
+       	</ul>    
+  	</div>
   
   
   
