--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -40,9 +40,8 @@ published: true
 	<div class="FooterBlock">
    		<ul >
           	<li><i class="fa fa-git-square" aria-hidden="true"></i>
-                <a href="https://rfd3344.github.io/notes/MacCommend/" target="_blank"> Edit On Github</a> </li>
-          	<li><i class="fa fa-cloud-upload" aria-hidden="true"></i>
-                <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Upload Image</a> </li>  	
+                <a href="https://rfd3344.github.io/notes/MacCommend/" target="_blank"> MacCommend</a> </li>
+          		
        	</ul>    
   	</div>
   
