--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -39,7 +39,7 @@ published: true
   
 	<div class="FooterBlock">
    		<ul >
-          	<li><i class="fa fa-apple" aria-hidden="true"</i>
+          	<li><i class="fa fa-apple" aria-hidden="true"> </i>
                 <a href="https://rfd3344.github.io/notes/MacCommend/" target="_blank"> MacCommend</a> </li>
           		
        	</ul>    
