--- a/css/general.css
+++ b/css/general.css
@@ -44,15 +44,19 @@ section{
 footer{
     clear:both;
     background: #193a52;
-  	color: white;
+    color: white;
     height: 200px;
     margin: auto;
     padding-top: 30px;
 }
 footer .FooterBlock{
-	width:45%;
-  	display:inline-block;
+    width:32%;
+    display:inline-block;
     vertical-align: top;
+}
+footer .FooterBlock ul{
+    text-align: center;
+    padding: 0;
 }
 footer ul li{
 	list-style: none;
