--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,45 +5,46 @@ published: true
 
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/page.css" />
 <div class="page">
-  <h1>{{ page.title }}</h1>
-  <div class="entry">
-    {{ content }}
-  </div>
+    <h1>{{ page.title }}</h1>
+    <div class="entry">
+        {{ content }}
+    </div>
 </div>
 
 
 
 <footer class="footer"> 
 <section>	
-	<div class="FooterBlock">
-   		<ul >
-          	<li><i class="fa fa-git-square" aria-hidden="true"></i>
-                <a href="https://github.com/rfd3344/rfd3344.github.io" target="_blank"> Edit On Github</a> </li>
-          	<li><i class="fa fa-cloud-upload" aria-hidden="true"></i>
+    <div class="FooterBlock">
+    	<ul >
+           	<li><i class="fa fa-cloud-upload" aria-hidden="true"></i>
                 <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/images" target="_blank"> Upload Image</a> </li>  	
-       	</ul>    
+       	    <li><i class="fa fa-files-o" aria-hidden="true"></i>
+                <a href="http://prose.io/#rfd3344/rfd3344.github.io/tree/master/notes" target="_blank"> Edit Notes</a> </li>
+            <li><i class="fa fa-file-image-o" aria-hidden="true"></i>
+                <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/notes/zPhoto" target="_blank"> Upload Notes Picture</a> </li>
+            <li><i class="fa fa-th-large" aria-hidden="true"></i>
+                <a href="http://prose.io/#rfd3344/rfd3344.github.io/tree/master/_posts" target="_blank"> Publish Blog </a> </li>
+        </ul>    
   	</div>
   
   
   
-  <div class="FooterBlock">
+    <div class="FooterBlock">
    		<ul>
-          	<li><i class="fa fa-files-o" aria-hidden="true"></i>
-                <a href="http://prose.io/#rfd3344/rfd3344.github.io/tree/master/notes" target="_blank"> Edit Notes</a> </li>
-          	<li><i class="fa fa-file-image-o" aria-hidden="true"></i>
-                <a href="https://github.com/rfd3344/rfd3344.github.io/tree/master/notes/zPhoto" target="_blank"> Edit Notes Picture</a> </li>
-          <li><i class="fa fa-th-large" aria-hidden="true"></i>
-              <a href="http://prose.io/#rfd3344/rfd3344.github.io/tree/master/_posts" target="_blank"> Publish Blog </a> </li>
-       	</ul>    
+            <li><i class="fa fa-th-large" aria-hidden="true"></i>
+                <a href="http://prose.io/" target="_blank"> Prose </a> </li>
+
+        </ul>    
   	</div>
   
 	<div class="FooterBlock">
    		<ul >
-          	<li><i class="fa fa-apple" aria-hidden="true"> </i>
+            <li><i class="fa fa-apple" aria-hidden="true"> </i>
                 <a href="https://rfd3344.github.io/notes/MacCommend/" target="_blank"> MacCommend</a> </li>
           		
-       	</ul>    
-  	</div>
+        </ul>    
+    </div>
   
   
   
