--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -5,7 +5,7 @@ layout: default
 
 
 <section class="notes">
-   <nav>   <div> </div>  </nav>
+   <nav>   <i class="fa fa-angle-double-left" aria-hidden="true"></i>   </nav>
    <div class="content">
       {{ content }}
    </div>
