--- a/css/notes.css
+++ b/css/notes.css
@@ -17,10 +17,16 @@ body{
    overflow-y: auto; 
    display: block;	
    margin-top: 10px;
-   margin-left: calc(50vw - 569px);
+   margin-left: calc(50vw - 500px);
    width:280px;
    border-right: 1px solid gray;
 }
+@media screen and (min-width: 1000px) {
+    .notes nav {
+        display:none;
+    }
+}
+
 .notes nav h1{
     font-family: sans-serif;
     text-align: left;
@@ -34,13 +40,14 @@ body{
 .notes nav div i{
     position: absolute;
     top: 36%;
-    right: 0;
+    right: -3px;
+    font-size: 34px;
+    color: #bd6c07e8;
 }
 .notes .content{
     width: 80%;
     max-width: 800px;
-    margin-left: calc(50vw - 290px);
-    border-left: 1px solid gray;
+    margin-left: calc(50vw - 221px);
     padding-left: 10px;
     padding-bottom: 100px;
 }
