--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -32,7 +32,7 @@ $(document).ready(function(){
      });
      $(".notes nav div").click(function() {
 	  $(".notes nav").css({'display':'none'});
-	  $(".notes .content").css({'margin':'auto','border':'0'});
+	  $(".notes .content").css({'margin':'auto'});
 	     
      });
     // left navigation continues shown 
